apport (0.49) UNRELEASED; urgency=low

  * gtk/apport-gtk.glade: Fix s/send/sent/ typo. Closes: LP#83061

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Feb 2007 15:18:43 +0100

apport (0.48) feisty; urgency=low

  New feature: Infrastructure for reporting kernel Oopses:

  * Add bin/kernel_hook and ship it in /usr/share/apport. The kernel can call
    this on an Oops. Add a test suite for it to test-hooks.
  * apport/ui.py: Add support for reporting ProblemType: Kernel reports, and
    add test suite for the workflow.
  * gtk/apport-gtk{,.glade}: Add implementation for ui_present_kernel_error().

  Improvements:

  * Merged various apport-retrace improvements from Kees' branch:
    - Add various options to override some report fields with local values.
    - Add --verbose option and be quiet by default.
    - Read ProcMaps for additional library dependencies, to also catch
      libraries loaded at runtime (plugins).
    - Set correct debug file directory when starting an interactive gdb
      session with -g.
  * Add gtk/apport-gtk.desktop.in: Desktop file for calling apport-gtk in
    'file a distro bug' mode, to be displayed in gnome-panel's System menu
    (see bug-reporting-tool spec). Also add a Makefile to do the
    intltool-merge dance, add it to POTFILES.in, and ship it in
    debian/apport-gtk.install.
  * bin/apport: Call add_os_info(), so that we get architecture information
    even for 'naked' reports which didn't go through UI enrichment.
  * Add ./test-hooks: Test suite for the various package hooks shipped with
    apport. Test the package problem hook for now.

  Bug fixes:

  * debian/control: Add missing python-apt dependency to apport
    (apport-retrace needs it). Thanks to Kees Cook for noticing.
  * debian/control: Add gdb dependency to python-apport.
  * backends/packaging-dpkg.py test suite: Verify that packages returned by
    get_dependencies() actually exist. This catches the 'chops off first