@@ -1,8 +1,10 @@
 apport (0.49) UNRELEASED; urgency=low
 
   * gtk/apport-gtk.glade: Fix s/send/sent/ typo. Closes: LP#83061
+  * apport/ui.py, create_crash_bug_title(): Cope with odd Tracebacks that are
+    shorter than three lines. Add test case from the bug. Closes: LP#83556
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Feb 2007 15:18:43 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue,  6 Feb 2007 15:53:36 +0100
 
 apport (0.48) feisty; urgency=low
 
